# networked-sfml-game-OscarNg0107

./: CMakeLists.txt  README.md
Data/Map/: Level Map.tmx
Data/Map/tsx/: street Tile.tsx
src/: Game.cpp  Game.h  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/GameObjects/: Bullet.cpp  Bullet.h  Character.cpp  Character.h  GameObject.cpp  GameObject.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Police.cpp  Police.h
src/GameState/: GameState.cpp  GameState.h  Level.cpp  Level.h  Lobby.cpp  Lobby.h  Menu.cpp  Menu.h  PlayerInit.cpp  PlayerInit.h
src/Network/: Client.cpp  Client.h  Server.cpp  Server.h  UserData.cpp  UserData.h
src/Tilemap/: SpawnPoint.cpp  SpawnPoint.h  Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h  miniz.c
src/UI/: Chatroom.cpp  Chatroom.h  HealthBar.cpp  HealthBar.h  PauseMenu.cpp  PauseMenu.h  Scoreboard.cpp  Scoreboard.h  ScoreboardBlock.cpp  ScoreboardBlock.h  Text.cpp  Text.h  matchMenu.cpp  matchMenu.h
